# slbc

./: .gitignore  Cargo.toml  README.md  SLBC_spec.md  ci.yml
.devcontainer/: Dockerfile  devcontainer.json
crates/slbc-cli/: Cargo.toml
crates/slbc-cli/src/: main.rs
crates/slbc-core/: Cargo.toml
crates/slbc-core/src/: container.rs  decoder.rs  encoder.rs  inspect.rs  lib.rs  numeral.rs  transform.rs  types.rs
crates/slbc-grpc/: Cargo.toml
crates/slbc-grpc/src/: lib.rs
crates/slbc-rest/: Cargo.toml
crates/slbc-rest/src/: lib.rs
crates/slbc-wasm/: Cargo.toml
crates/slbc-wasm/src/: lib.rs
