[workspace]
resolver = "2"
members = [
    "crates/slbc-core",
    "crates/slbc-cli",
    "crates/slbc-grpc",
    "crates/slbc-rest",
    "crates/slbc-wasm",
]

[workspace.package]
version = "0.10.0"
edition = "2021"
license = "Apache-2.0"
description = "Sanskrit Linguistic Binary Codec — phonemic encoder-decoder"

[workspace.dependencies]
slbc-core = { path = "crates/slbc-core" }
clap = { version = "4", features = ["derive"] }
anyhow = "1"
